bugfix: metabar icon in navbar on mobile resolution not centre aligned

--- a/less/microcosm-navbar.less
+++ b/less/microcosm-navbar.less
@@ -402,6 +402,8 @@
   }
 }
 .metabar-toggle{
+  padding:0;
+  text-align: center;
   float: right;
   margin-right: -8px;
   @media (min-width: @screen-sm-min) {
